--- a/Index.html
+++ b/Index.html
@@ -54,9 +54,11 @@
             </nav>
         </header>
         <main>
+            <!-- Banner do site -->
             <aside>
                 <img src="./Imagens/Banner da ChocoLucas.png" alt="Banner com fundo laranja com um texto no meio escrito: Promoções com 50% de desconto!!!. Em volta do texto, temos algumas barras de chocolates. Tanto no lado esquerdo, como no lado direito, temos barras de chocolates com sua descrição logo abaixo, e a promoção de 50% de desconto abaixo da descrição." title="Banner do Site">
             </aside>
+            <!-- Carrossel dos mais vendidos -->
             <section class="maisVendidos">
                 <h1>Mais vendidos</h1>
                 <div class="carrossel">
@@ -71,6 +73,7 @@
                     <i class="bi bi-chevron-right"></i>
                 </div>
             </section>
+            <!-- Carrossel dos melhores preços -->
             <section class="melhoresPrecos">
                 <h1>Melhores preços</h1>
                 <div class="carrossel">
@@ -85,6 +88,7 @@
                     <i class="bi bi-chevron-right"></i>
                 </div>
             </section>
+            <!-- Melhores marcas do site -->
             <section class="marcas">
                 <h1>Melhores marcas</h1>
                 <div class="imagemMarcas">
@@ -97,5 +101,34 @@
                 </div>  
             </section>
         </main>
+        <!-- Rodapé do site -->
+        <footer class="rodape">
+            <div class="direitos">
+                <p>©2025, ChocoLucas</p>
+                <div class="iconesRodape">
+                    <i class="bi bi-twitter"></i>
+                    <i class="bi bi-instagram"></i>
+                    <i class="bi bi-facebook"></i>
+                    <i class="bi bi-discord"></i>
+                </div>
+            </div>
+            <div class="contatos">
+                <p>Entre em contato</p>
+                <p>ChocoLucas@email.com</p>
+                <p>(19) 99999-9999</p>
+            </div>
+            <div class="links">
+                <p>Links úteis</p>
+                <p>Fale conosco</p>
+                <p>Sobre nós</p>
+            </div>
+            <div class="configuracoes">
+                <p>Configurações</p>
+                <div class="iconesAcessibilidade">
+                    <i class="bi bi-translate"></i>
+                    <i class="bi bi-person-arms-up"></i>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
